# otus-c

./: .gitmodules  README.md
hw01-rarjpeg/: Makefile  README.md  iszipjpeg.c
hw02-encodings/: Makefile  README.md  iconv.c  unicode_transbase.c  unicode_transbase.h  utf8t_cp1251.c  utf8t_cp1251.h  utf8t_iso-8859-5.c  utf8t_iso-8859-5.h  utf8t_koi8r.c  utf8t_koi8r.h  utf8translator.c  utf8translator.h  utf8translator_spi.h
hw03-hashtable/: Makefile  README.md  hash_table.c  hash_table.h  str_normalize.c  str_normalize.h  word_count.c
hw04-curlweather/: CMakeLists.txt  README.md  curlweather.c  version.h.in  wttrrequest.c  wttrrequest.h
hw05-gstreamer-wav/: CMakeLists.txt  README.md  compile_commands.json  gstwavsrc.c  gstwavsrc.h  wav_file.c  wav_file.h
hw06-logging-lib/: README.md
hw06-logging-lib/demoapp/: CMakeLists.txt  demoapp.c
hw06-logging-lib/log4c/: CMakeLists.txt
hw06-logging-lib/log4c/include/: log4c.h
hw06-logging-lib/log4c/src/: log4c.c
hw07-asm/result/: Makefile  leak_fixed_main.asm  leak_fixed_optimized_main.asm  main.c  main_fixed.c
hw08-posix/: README.md
hw08-posix/base/src/common/: .#clib-package.c  clib-package.c
hw08-posix/base/test/package/: compile_commands.json
hw08-posix/patches/: 0001-Fix-3-memory-leaks-in-clib-package.c.patch
